# os_project

./: Cargo.toml  Makefile  MakefileOriginal  README.md  idt.c  interrupt.asm  isr.c  isr.h  timer.c  types.h  util.c  util.h
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: buddy_alloc.rs  frame_alloc.rs  gdt.rs  global_alloc.rs  interrupts.rs  lib.rs  scheduler.rs  serial_port.rs  syscalls.rs  userspace.rs
multiboot2/: README.md
multiboot2/src/: memory_map.rs
rust_os/: Cargo.toml
rust_os/src/: boot.asm  interrupts.rs  lib.rs  linker.ld  long_mode_init.asm  vga_buffer.rs
rust_os/src/cpu/: idt.c  idt.h  isr.c  isr.h  timer.c  timer.h
rust_os/src/drivers/: keyboard.c
rust_os/src/kernel/: kernel.c
rust_os/src/memory/: buddy_allocator.rs  frame_allocator.rs  linked_list.rs  mod.rs
shell/: Cargo.toml
shell/src/: builtins.rs  lib.rs  utils.rs
src/: boot.asm  lib.rs  linker.ld  long_mode_init.asm  multiboot_header.asm
