[package]
name = "diy-os"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.5.2"
x86_64 = "0.12.0"
pc-keyboard = "0.3.1"
multiboot2 = "0.1.0"
if_chain = "1.0.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
"no-panic-handler" = []
